--- a/src/css/chatbot.module.css
+++ b/src/css/chatbot.module.css
@@ -22,14 +22,14 @@
 }
 
 .chatbotIconContainer svg {
-    width: 30px;
-    height: 30px;
-    transition: all 0.7s;
-    color:#253f39
+    width: 35px;
+    height: 35px;
+    transition: all 0.3s;
+    color: #253f39;
 }
 
 .chatbotIcon:hover {
-    /* transform: scale(1.1); */
+    transform: scale(1.1);
     /* color: rgb(98 17 17 / 80%); */
 }
 
