--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -29,6 +29,7 @@ body {
     position: relative;
     overflow: hidden;
     cursor: url('../../public/assets/mouse_cursor_text.png') 5 5, progress;
+    height: 100vh;
 }
 
 .slide {
@@ -109,7 +110,6 @@ body {
 .mainEvent {
     width: 100%;
     height: 100vh;
-    background-color: #253f39;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -160,7 +160,7 @@ body {
 .randomImage {
     position: absolute;
     transition: opacity 0.5s ease-in-out, width 0.5s ease-in-out, height 0.5s ease-in-out;
-    animation: mouseImg 3s ease-in-out;
+    animation: mouseImg 2s ease-in-out;
     animation-fill-mode: forwards;
     object-fit: cover;
     border-radius: 8px;
@@ -170,11 +170,11 @@ body {
     0% {
         opacity: 1;
         width: 280px;
-        height: 325px;
+        height: 320px;
     }
     100% {
         opacity: 0;
-        width: 100px;
-        height: 150px;
+        width: 140px;
+        height: 160px;
     }
 }
