--- a/src/css/signin.module.css
+++ b/src/css/signin.module.css
@@ -56,28 +56,27 @@
 
 .signinBtn , .kakaoBtn{
     width: 250px;
-    height: 50px;
     border: none;
     outline: none;
-    border-radius: 7px;
     cursor: pointer;
     transition: 0.25s;
 }
 
 .signinBtn {
+    height: 35px;
+    border-radius: 5px;
     color: white;
     background-color: #253f39;
     margin-top: 20px;
 }
 
 .kakaoBtn {
-    color: black;
-    background-color: #f9e000;
+    width: 250px;
 }
 
-.signinBtn:hover, .kakaoBtn:hover {
+/* .signinBtn:hover, .kakaoBtn:hover {
     transform: scale(1.03);
-}
+} */
 
 .Link {
     display: flex;
