--- a/src/css/signup.module.css
+++ b/src/css/signup.module.css
@@ -1,37 +1,27 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-button {
+/* button {
     border-radius: 16px;
     height: 40px;
     width: 100px;
-}
+} */
 
 .bodys {
-
     width: 100vw;
     height: 100vh;
-    background-color: #253f39;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
-
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     background-color: rgb(255, 255, 255);
-    border-radius: 16px;
-    width: 400px;
-    height: 500px;
-
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
+    border-radius: 12px;
+    width: 360px;
+    height: 450px;
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.05);
 }
 
 .form {
@@ -40,7 +30,6 @@ button {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-
     width: 390px;
     height: 750px;
 }
@@ -52,10 +41,11 @@ button {
 .email,
 .emailNumber {
     width: 250px;
-    height: 50px;
+    height: 30px;
     border: none;
     border-bottom: 2px solid #a0b9b3;
     outline: none;
+    margin-bottom: 15px;
 }
 
 .iconContainer {
@@ -68,7 +58,6 @@ button {
     font-size: 22px;
     right: 0px;
     bottom: 15px;
-
 }
 
 .messageDiv {
@@ -79,26 +68,30 @@ button {
 
 .form span {
     display: flex;
-    justify-content: start;
-    top: 50px;
     font-size: 13px;
-    font-weight: bold;
-    color: rgb(202, 30, 30);
+    margin-top: -12px;
 }
 
 .emailBtn {
-    color: white;
-    background-color: #253f39;
-    margin: 20px 0 20px 0;
+    color: black;
+    background-color: #ffffff;
+    /* margin: 35px 0 0px 0; */
     width: 250px;
+    border-radius: 5px;
+    cursor: pointer;
+    height: 30px;
+    border: 2px solid #253f39;
 }
 
-
-
 .signupBtn {
+    width: 250px;
+    height: 40px;
     color: white;
+    border-radius: 5px;
     background-color: #253f39;
-    margin: 30px 0 0 0;
+    cursor: pointer;
+    border: none;
+    margin-top: 15px;
 }
 
 .emailDiv {
@@ -108,17 +101,18 @@ button {
 .emailNumberConfirmBtn {
     position: absolute;
     right: 0px;
-    top: 0px;
     color: white;
     background-color: #253f39;
-    width: 30%;
-    height: 40px;
+    padding: 5px 15px;
+    border-radius: 20px;
+    cursor: pointer;
+    border: none;
 }
 
 .timer {
     position: absolute;
-    right: 17px;
-    top: 50px;
+    right: 0;
+    top: 35px;
 }
 
 /* focus */
