--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -1,72 +1,46 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .bodys {
-    padding: 40px 60px 20px 60px;
-
-    width: auto;
-    height: auto;
-    background-color: #253f39;
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container1 {
-
-    background-color: #253f39;
     position: relative;
-
+    width: 1000px;
 }
 
 .categoryInfo {
-    padding-left: 20px;
     margin-top: 50px;
-    width: 95vw;
-    height: 100px;
 }
 
 .title {
-    font-size: 36px;
+    font-size: 25px;
     color: white;
+    margin-bottom: 5px;
 }
 
 .sort {
     cursor: pointer;
-    font-size: 18px;
-    margin: 10px 0 0 20px;
+    font-size: 15px;
     color: white;
 }
 
 .selectedSort {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .container2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
-    @media (max-width : 760px) {
-        justify-content: center;
-        margin-left: 0
-    }
 }
 
 .productContainer {
     cursor: pointer;
-    margin: 20px 20px 30px 20px;
-
-    width: 300px;
-    height: 370px;
-
-
-    @media (max-width : 679px) {
-
-        margin-left: 0
-    }
-
+    width: 250px;
+    height: 250px;
 }
 
 .listHr {
@@ -182,7 +156,7 @@
     font-weight: bold;
 
 
-    &::before {
+    /* &::before {
         content: "";
         position: absolute;
         top: 50%;
@@ -192,13 +166,13 @@
         background-color: rgb(177, 177, 177);
         z-index: -1;
 
-    }
+    } */
 }
-
+/* 
 .productImg {
     transition: transform 0.3s ease;
 }
 
 .productImgHover {
     transform: scale(1.03);
-}
+} */
