--- a/src/css/list.module.css
+++ b/src/css/list.module.css
@@ -17,46 +17,51 @@
 .title {
     font-size: 25px;
     color: white;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
 
 .sort {
     cursor: pointer;
     font-size: 15px;
     color: white;
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+
+.sort > span{
+    margin-right:5px;
 }
 
 .selectedSort {
     font-weight: bold;
     font-size: 16px;
+    color: rgb(255 216 89);
 }
 
 .container2 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .productContainer {
     cursor: pointer;
     width: 250px;
-    height: 250px;
-}
-
-.listHr {
-    position: relative;
-    cursor: default;
-    width: 341px;
-    margin-top: 20px;
-    height: 2px;
-    background-color: black;
-    display: block;
+    max-height: 290px;
+    margin-bottom: 25px;
 }
 
 .productImg {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
+    padding: 10px;
+}
 
+.listItemImg{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
 .productTextHeader {
@@ -72,37 +77,40 @@
 }
 
 .category {
-    margin: 0 7px 0 0;
-    color: rgb(183, 163, 97);
-    font-size: 18px;
-
+    color: rgb(255 216 89);
+    font-size: 15px;
 }
 
 .productName {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    font-size: 22px;
+    font-size: 16px;
     color: white;
-    text-size-adjust: auto;
-    height: 45px;
-    font-weight: bold;
+    text-align: center;
+    padding: 0px 10px;
 }
 
 .productTextBot {
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: center;
 
+}
+
+.sale{
+    padding: 0px 8px;
+    border-radius: 20px;
+    background-color: rgb(255 216 89);
+    margin-right: 5px;
 }
 
 .price {
-    font-size: 22px;
+    font-size: 14px;
     color: white;
 }
 
-.listEndDiv {
+/* .listEndDiv {
     position: relative;
     display: flex;
     width: auto;
@@ -112,11 +120,9 @@
     border-top: solid 20px #253f39;
     z-index: 2;
 
-}
+} */
 
-.listEndText {
-
-
+/* .listEndText {
     background-color: #253f39;
     color: white;
     font-size: 20px;
@@ -133,8 +139,8 @@
         z-index: -1;
 
     }
-}
-
+} */
+/* 
 .listMoreDiv {
     position: relative;
     display: flex;
@@ -156,7 +162,7 @@
     font-weight: bold;
 
 
-    /* &::before {
+    &::before {
         content: "";
         position: absolute;
         top: 50%;
@@ -166,8 +172,8 @@
         background-color: rgb(177, 177, 177);
         z-index: -1;
 
-    } */
-}
+    }
+} */
 /* 
 .productImg {
     transition: transform 0.3s ease;
