--- a/src/css/search.module.css
+++ b/src/css/search.module.css
@@ -1,30 +1,40 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.bodys {
+    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-
 .container1 {
-    margin-top: 50px;
-    background-color: #253f39;
     position: relative;
+    width: 1000px;
 
+}
+
+.container2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 1000px;
 }
 
 .categoryInfo {
-
     margin-top: 50px;
-
     width: 95%;
     height: 100px;
 }
 
 .searchAndResult {
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
+
+    font-size: 30px;
     color: white;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
+
+.sortContainer {
+    margin: 20px 0 0 0
 }
 
 .colorText {
@@ -165,146 +175,55 @@
     color: white;
     font-size: 24px;
     cursor: pointer;
+    transition: transform 1s ease;
 }
 
+.resetColor:hover {
+    transform: rotate(360deg);
+}
 
 .sort {
     cursor: pointer;
-    font-size: 18px;
+    font-size: 15px;
     color: white;
-    margin: 10px 0 0 20px;
+    margin: 20px 0 20px 10px;
+}
+
+.sort>span {
+    margin-right: 5px;
 }
 
 .selectedSort {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
+    color: rgb(255 216 89);
 
 }
 
 .container2 {
     display: flex;
     flex-wrap: wrap;
-    justify-content: start;
-
-    margin-top: 30px;
-
-    @media (max-width : 760px) {
-        justify-content: center;
-        margin-left: 0
-    }
-}
-
-.productContainer {
-    margin-left: 40px;
-    margin-top: 20px;
-    width: 300px;
-    height: 370px;
-
-    @media (max-width : 679px) {
-
-        margin-left: 0
-    }
-
-}
-
-.productImg {
-    width: 300px;
-    height: 300px;
-
-}
-
-.productName {
-    font-size: 26px;
-    color: white;
-}
-
-/*  */
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.bodys {
-    padding: 40px 60px 20px 60px;
-    width: auto;
-    height: auto;
-    background-color: #253f39;
-}
-
-
-
-.categoryInfo {
-    padding-left: 20px;
-    margin-top: 50px;
-    width: 95vw;
-    height: 100px;
-}
-
-.title {
-    font-size: 36px;
-    color: white;
-}
-
-.titleHr {
-    margin: 10px;
-}
-
-.sort {
-    cursor: pointer;
-    font-size: 18px;
-    color: white;
-    margin: 10px 0 0 20px;
-}
-
-.selectedSort {
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.container2 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-
-    @media (max-width : 760px) {
-        justify-content: center;
-        margin-left: 0
-    }
+    justify-content: flex-start;
 }
 
 .productContainer {
     cursor: pointer;
-    margin: 20px 20px 30px 20px;
-
-    width: 300px;
-    height: 370px;
-
-
-    @media (max-width : 679px) {
-
-        margin-left: 0
-    }
-
-}
-
-.hr {
-    position: relative;
-    cursor: default;
-    width: 341px;
-    margin-top: 20px;
-    height: 2px;
-    background-color: rgb(213, 213, 213);
-    display: block;
-    z-index: 1;
+    width: 250px;
+    max-height: 290px;
+    margin-bottom: 25px;
 }
 
 .productImg {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
+    padding: 10px;
 
+}
+
+.listItemImg {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
 .productTextHeader {
@@ -320,111 +239,35 @@
 }
 
 .category {
-    margin: 0 7px 0 0;
-    color: rgb(183, 163, 97);
-    font-size: 18px;
-
+    color: rgb(255 216 89);
+    font-size: 15px;
 }
 
 .productName {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    font-size: 22px;
+    font-size: 16px;
     color: white;
-    text-size-adjust: auto;
-    height: 45px;
-    font-weight: bold;
+    text-align: center;
+    padding: 0px 10px;
 }
 
 .productTextBot {
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: center;
 
+}
+
+.sale {
+    padding: 0px 8px;
+    border-radius: 20px;
+    background-color: rgb(255 216 89);
+    margin-right: 5px;
 }
 
 .price {
-    font-size: 22px;
+    font-size: 14px;
     color: white;
-}
-
-.listEndDiv {
-    position: relative;
-    display: flex;
-    width: auto;
-    height: 50px;
-    align-items: end;
-    justify-content: center;
-    border-top: solid 20px #253f39;
-
-    z-index: 2;
-
-}
-
-.listEndText {
-
-
-    background-color: #253f39;
-
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-
-    &::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background-color: rgb(177, 177, 177);
-        z-index: -1;
-
-    }
-}
-
-.listMoreDiv {
-    position: relative;
-    display: flex;
-    width: auto;
-    height: 50px;
-    align-items: end;
-    justify-content: center;
-    border-top: solid 20px #253f39;
-
-    z-index: 2;
-
-}
-
-.listMoreText {
-
-    cursor: pointer;
-    background-color: #253f39;
-
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-
-
-    &::before {
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 0;
-        width: 100%;
-        height: 1px;
-        background-color: rgb(177, 177, 177);
-        z-index: -1;
-
-    }
-}
-
-.productImg {
-    transition: transform 0.3s ease;
-}
-
-.productImgHover {
-    transform: scale(1.03);
 }
