--- a/src/css/showing.module.css
+++ b/src/css/showing.module.css
@@ -66,13 +66,13 @@
     color: white;
 }
 
-.productImg {
+/* .productImg {
     transition: transform 0.3s ease;
-}
+} */
 
-.productImgHover {
+/* .productImgHover {
     transform: scale(1.03);
-}
+} */
 
 
 .circleDiv {
@@ -171,11 +171,11 @@
 
 
 .won {
-    font-size: 16;
+    font-size: 16px;
 }
 
 .icon {
-    font-size: 22;
+    font-size: 22px;
 }
 
 .productTextHeader {
