--- a/src/css/showing2.module.css
+++ b/src/css/showing2.module.css
@@ -72,14 +72,14 @@
     color: white;
 }
 
-.productImg {
+/* .productImg {
     transition: transform 0.3s ease;
-}
+} */
 
-.productImgHover {
+/* .productImgHover {
     transform: scale(1.03);
 }
-
+ */
 
 .circleDiv {
     position: absolute;
@@ -225,11 +225,11 @@
 }
 
 .won {
-    font-size: 16;
+    font-size: 16px;
 }
 
 .icon {
-    font-size: 22;
+    font-size: 22px;
 }
 
 .productTextHeader {
