--- a/src/css/findpw.module.css
+++ b/src/css/findpw.module.css
@@ -1,4 +1,3 @@
-
 .bodys {
     width: 100vw;
     height: 100vh;
@@ -52,11 +51,12 @@
     border-bottom: 2px solid #a0b9b3;
 }
 
-.findId:focus, .findName:focus{
+.findId:focus,
+.findName:focus {
     border-bottom: 2px solid #253f39;
 }
 
-.emailDiv{
+.emailDiv {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -153,7 +153,7 @@
     outline: none;
 }
 
-.emailNumber:focus{
+.emailNumber:focus {
     border-bottom: 2px solid #253f39;
 }
 
@@ -165,4 +165,3 @@
     color: red;
     font-weight: bold;
 }
-
