--- a/src/css/order.module.css
+++ b/src/css/order.module.css
@@ -5,10 +5,10 @@
 }
 
 .bodys {
-    padding: 40px 200px 40px 200px;
+    padding: 40px 200px 140px 200px;
     width: 100vw;
     height: auto;
-    background-color: #253f39;
+    /* background-color: #253f39; */
 
 }
 
