--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -8,7 +8,7 @@
     padding: 40px 25% 40px 25%;
     width: 100vw;
     height: auto;
-    background-color: #253f39;
+
 
 }
 
@@ -19,6 +19,7 @@
     margin-top: 50px;
     padding: 30px 30px 10px 30px;
     border-radius: 7px;
+    width: 750px;
 }
 
 
