--- a/src/css/profileedit.module.css
+++ b/src/css/profileedit.module.css
@@ -7,7 +7,7 @@
 .bodys {
     width: 100vw;
     height: 100vh;
-    background-color: #253f39;
+    /* background-color: #253f39; */
 }
 
 .container {
