--- a/src/css/showing.module.css
+++ b/src/css/showing.module.css
@@ -1,9 +1,9 @@
 .bodys {
 
-    padding: 20px 60px 20px 60px;
+    padding: 0 60px 20px 60px;
     width: auto;
     height: auto;
-    background-color: #253f39;
+    /* background-color: #253f39; */
 
 }
 
