--- a/src/css/chatbot.module.css
+++ b/src/css/chatbot.module.css
@@ -140,8 +140,12 @@
     border-bottom-right-radius: 6px;
 }
 
+.chatbotChattingBtn svg{
+    transition: all 0.3s;
+}
+
 .chatbotChattingBtn svg:hover {
-    /* scale: 1.1; */
+    scale: 1.1;
 } 
 
 /* 처음 인사 talk */
