--- a/src/css/product.module.css
+++ b/src/css/product.module.css
@@ -1,7 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .inforcontainer {
@@ -24,13 +25,14 @@
     align-items: center;
     width: 420px;
     height: 420px;
-    border-radius: 5px;
 }
 
 .image {
     width: 520px;
     height: 420px;
     object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.05);
     /* border-bottom: 5px solid #253f39;
     border-top: 5px solid #253f39; */
 }
@@ -42,30 +44,34 @@
     border-radius: 5px;
     width: 400px;
     height: 420px;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
+    box-shadow: 1px 1px 10px 5px rgba(0, 0, 0, 0.05);
 }
 
 .inforHeader {
     display: flex;
     flex-direction: column;
+    width: 310px;
 }
 
 .inforTitle {
     color: #bababa;
     font-size: 18px;
-    margin-bottom: 5px;
+    margin-bottom: 70px;
 }
 
 .inforName {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 600;
     margin-bottom: 5px;
 }
 
 .inforRate{
-    font-size: 18px;
-    margin-bottom: 20px;
+    font-size: 35px;
+    font-style: italic;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
 
 .inforPrice {
@@ -82,6 +88,11 @@
 
 .amount {
     font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 310px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .inforBody {
@@ -108,6 +119,7 @@
 .amount {
     margin-top: 20px;
     margin-bottom: 20px;
+    font-size: 25px;
 }
 
 .bottom {
