--- a/src/css/profile.module.css
+++ b/src/css/profile.module.css
@@ -1,25 +1,18 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .bodys {
-    padding: 40px 25% 40px 25%;
-    width: 100vw;
-    height: auto;
-
-
+    padding-top: 100px;
+    display: flex;
+    justify-content: center;
 }
 
 .container {
-
     position: relative;
     background-color: white;
     margin-top: 50px;
-    padding: 30px 30px 10px 30px;
     border-radius: 7px;
     width: 750px;
+    padding: 30px;
+    padding-top: 50px;
+    margin-bottom: 30px;
 }
 
 
@@ -28,12 +21,71 @@
     padding: 20px;
     color: white;
     background-color: #253f39;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .infoTitle {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
 
-    font-size: 22px;
+.inforHello{
+    font-size: 35px;
+}
+
+.individualBox{
+    background-color: white;
+    padding: 10px;
+}
+
+.indivHeaderBox{
+    display: flex;
+    border-bottom: 1px solid #e5e5e5;
+    color: black;
+    font-size: 15px;
+    padding-bottom: 5px;
+}
+
+.inforUseridHeader{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+}
+
+.inforUserNameHeader{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.inforUserPointHeader{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+}
+
+.indivBodyBox{
+    display: flex;
+    color: #000;
+    margin-top: 10px;
+}
+
+.inforUserid{
+    width: 25%;
+    display: flex;
+    justify-content: center;
+}
+
+.inforUserName{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.inforUserPoint{
+    width: 25%;
+    display: flex;
+    justify-content: center;
 }
 
 .btnFlex {
@@ -45,21 +97,24 @@
     cursor: pointer;
     color: white;
     background-color: #253f39;
-    border-radius: 7px;
-    margin: 5px 0 5px 0;
+    border-radius: 25px;
+    margin: 10px 0 10px 0;
+    padding: 5px 10px;
+    text-decoration: none;
+    font-size: 14px;
 }
 
 .orderListContainer {
-
-    width: auto;
+    /* width: auto; */
     color: white;
     background-color: #253f39;
-    border-radius: 10px;
+    border-radius: 5px;
+    margin-top: 30px;
 }
 
 .orderTitle {
-    padding: 20px 0 20px 20px;
-    font-size: 22px;
+    padding: 20px 0 10px 20px;
+    font-size: 20px;
 }
 
 .orderListBox {
@@ -67,7 +122,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    padding: 20px;
+    padding-top: 0px;
 }
 
 .whiteBox {
@@ -75,17 +131,23 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    width: 90%;
-    height: auto;
+    /* height: auto; */
     background-color: white;
     color: black;
-    margin-bottom: 30px;
     padding: 10px;
-    border-radius: 7px;
+    width: 100%;
 }
 
 .orderHr {
-    width: 95%;
+    width: 100%;
+    border: 1px solid #e5e5e5;
+}
+
+.orderBoxHeader{
+    display: flex;
+    width: 100%;
+    border-bottom: 1px solid #e5e5e5;
+    font-size: 15px;
 }
 
 .box {
@@ -94,7 +156,7 @@
     align-items: center;
     text-align: center;
     width: 33.3%;
-    margin: 5px 0 5px 0;
+    margin: 6px 0 6px 0;
 }
 
 .orderText {
@@ -111,12 +173,14 @@
     width: auto;
     color: white;
     background-color: #253f39;
-    border-radius: 10px;
+    border-radius: 5px;
+    margin-top: 30px;
 }
 
 .addressTitle {
     padding: 20px 0 20px 20px;
-    font-size: 22px;
+    font-size: 20px;
+    padding-bottom: 0px;
 }
 
 .addressBox {
@@ -124,51 +188,59 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
+    padding-top: 10px;
 }
 
 .whiteBox2 {
     display: flex;
-    justify-content: start;
-    align-items: center;
     flex-wrap: wrap;
-    width: 90%;
+    width: 100%;
     height: auto;
     background-color: white;
     color: black;
-    margin-bottom: 30px;
     padding: 10px;
-    border-radius: 7px;
+    flex-direction: column;
 }
 
-.addressHr {
-    width: 98%;
-    margin-left: 1%;
+.addressItem{
+    display: flex;
+    border-bottom: 2px dashed #e5e5e5;
+    padding: 10px;
+    align-items: center;
 }
 
-.addressHr2 {
-    width: 100%;
-    margin: 0 0 10px 0;
-    border: dashed 1px;
+.homeIcon{
+    margin-right: 10px;
+}
+
+.addressName{
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.address{
+    font-size: 18px;
 }
 
 .askTitle {
-    padding: 20px 0 20px 20px;
-    font-size: 22px;
+    padding: 20px 0 10px 20px;
+    font-size: 20px;
 }
 
 .couponContainer {
-
     width: auto;
     padding: 20px;
     color: white;
     background-color: #253f39;
     margin-bottom: 30px;
-    border-radius: 10px;
+    border-radius: 5px;
+    margin-top: 30px;
 }
 
 .couponFlex {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
@@ -176,56 +248,66 @@
     position: relative;
     color: black;
     background-color: white;
-    width: 250px;
-    height: 150px;
+    width: 200px;
+    height: 110px;
     margin: 15px;
     border-radius: 10px;
-    border: solid 3px;
+    border: solid 1px;
+    margin-left: 0px;
+}
+
+.couponTitleBox{
+    display: flex;
+    align-items: center;
+}
+
+.couponTitle{
+    font-size: 20px;
+    margin-right: 10px;
 }
 
 .couponIndex {
-    position: relative;
-    bottom: 31px;
-    left: 95px;
-
+    padding: 2px 10px;
+    background-color: #ffd859;
+    border-radius: 25px;
 }
 
 .coupon1 {
     position: absolute;
-    top: 60px;
-    left: 95.5%;
+    top: 40px;
+    left: 93.5%;
     width: 35px;
     height: 35px;
     background-color: #253f39;
     border-radius: 100px;
-
 }
 
 .couponName {
     margin: 10px;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
     color: #253f39;
 }
 
 .couponDis {
     margin: 10px;
-    font-size: 34px;
+    font-size: 25px;
     font-weight: bold;
 }
 
 .dis {
     position: absolute;
-    left: 80px;
-    bottom: 70px;
+    right: 10px;
+    top: 10px;
 }
 
 .couponHr {
-    width: 210px;
-    margin-left: 15px;
+    width: calc(100% - 20px);
+    margin-left: 10px;
 }
 
 .couponDate {
-    margin: 15px;
-    font-size: 18px;
+    font-size: 14px;
+    margin-left: 10px;
+    margin-top: 5px;
 }
