--- a/src/css/notion.module.css
+++ b/src/css/notion.module.css
@@ -90,11 +90,12 @@
     height: auto;
     gap: 10px;
     margin-bottom: 10px;
+    width: 100%;
 }
 
 .notionDaterWrapper {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     padding-right: 10px;
@@ -104,8 +105,8 @@
 .notionInfor {
     padding-left: 10px;
     padding-right: 10px;
-    width: 100%;
     height: auto;
     word-break:break-all;
     line-height: 2;
+    white-space: pre-line;
 }
