--- a/src/css/qna.module.css
+++ b/src/css/qna.module.css
@@ -298,6 +298,7 @@
     width: 450px;
     height: 100px;
     resize: none;
+    outline: none;
 }
 
 .inquireMainAdiminAnswer {
@@ -351,6 +352,7 @@
     width: 450px;
     height: 50px;
     resize: none;
+    outline: none;
 }
 
 .answerMain {
@@ -359,6 +361,7 @@
     width: 450px;
     height: 100px;
     resize: none;
+    outline: none;
 }
 
 .answerBtnWrapper {
