[feat] 프로필수정, 주문내역, 비밀번호찾기 css 수정 및 h1 > div 변경

--- a/src/css/findpw.module.css
+++ b/src/css/findpw.module.css
@@ -161,7 +161,19 @@
 
 .authorText {
     position: absolute;
-    font-size: 13px;
+    font-size: 14px;
+    color: red;
+    font-weight: bold;
+}
+
+.green {
+    font-size: 14px;
+    color: green;
+    font-weight: bold;
+}
+
+.red {
+    font-size: 14px;
     color: red;
     font-weight: bold;
 }
