--- a/src/css/loading.module.css
+++ b/src/css/loading.module.css
@@ -18,20 +18,25 @@
     backdrop-filter: blur(5px);
 }
 
-.loader {
-    border: 5px solid rgb(241, 77, 77);
-    border-top: 5px solid black;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    animation: loading 2s ease-out infinite;
-}
 
-@keyframes loading {
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
-}
+@-webkit-keyframes spin {
+    to {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg); } }
+  
+  @keyframes spin {
+    to {
+      -webkit-transform: rotate(360deg);
+              transform: rotate(360deg); } }
+  
+  
+  .halfRing:before {
+    -webkit-animation: spin 1s infinite linear;
+            animation: spin 1s infinite linear;
+    border-radius: 10px;
+    -webkit-box-shadow: 25px 0px 0 0 rgba(255, 255, 255, 0.2), 20.22542px 14.69463px 0 0 rgba(255, 255, 255, 0.4), 7.72542px 23.77641px 0 0 rgba(255, 255, 255, 0.6), -7.72542px 23.77641px 0 0 rgba(255, 255, 255, 0.8), -20.22542px 14.69463px 0 0 white;
+            box-shadow: 25px 0px 0 0 rgba(255, 255, 255, 0.2), 20.22542px 14.69463px 0 0 rgba(255, 255, 255, 0.4), 7.72542px 23.77641px 0 0 rgba(255, 255, 255, 0.6), -7.72542px 23.77641px 0 0 rgba(255, 255, 255, 0.8), -20.22542px 14.69463px 0 0 white;
+    height: 10px;
+    width: 10px;
+    display: block;
+    content: ''; }
