--- a/src/css/qna.module.css
+++ b/src/css/qna.module.css
@@ -1,9 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 .qnaContainer {
     display: flex;
     flex-direction: column;
@@ -18,21 +12,23 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    border-radius: 7px;
+    border-radius: 5px;
     padding: 16px;
     width: 700px;
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 .qnaWrapper {
-    border: 3px solid #253f39;
-    border-radius: 7px;
+    border: 2px solid #253f39;
+    border-radius: 5px;
     margin-bottom: 70px;
     padding: 16px;
     width: 600px;
 }
 
 .qnaTitle, .inquireHeaderTitle {
-    font-size: 30px;
+    font-size: 25px;
     margin-bottom: 20px;
 }
 
@@ -46,11 +42,12 @@
     align-items: center;
     background-color: #253f39;
     color: white;
-    border-radius: 7px;
+    border-radius: 5px;
     width: 565px;
     height: 50px;
     padding: 16px;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .qnaBox2Wrapper {
@@ -63,7 +60,7 @@
     height: auto;
     margin-bottom: 10px;
     border: 1px solid #253f39;
-    border-radius: 7px;
+    border-radius: 5px;
 }
 
 .qnaBox2 {
@@ -78,10 +75,12 @@
     height: 50px;
     padding: 16px;
     color: white;
+    cursor: pointer;
 }
 
 .qnaBtn {
     cursor: pointer;
+    transition: all 0.3s;
 }
 
 .qnaBtn:hover {
@@ -107,8 +106,8 @@
 }
 
 .inquireWrapper {
-    border: 3px solid #253f39;
-    border-radius: 7px;
+    border: 2px solid #253f39;
+    border-radius: 5px;
     padding: 16px;
     width: 600px;
 }
@@ -124,7 +123,7 @@
     align-items: center;
     background-color: #253f39;
     color: white;
-    border-radius: 7px;
+    border-radius: 5px;
     width: 565px;
     height: 50px;
     padding: 16px;
@@ -142,8 +141,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     font-size: 10px;
     color: black;
     background-color: white;
@@ -162,15 +161,13 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    width: 23px;
-    height: 23px;
     right: 275px;
-    bottom: -2px;
+    bottom: 0px;
     font-size: 11px;
     background-color: white;
-    border-radius: 50%;
+    border-radius: 25px;
     color: black;
-    
+    padding: 4px 8px;
 }
 
 .inquireMainBox {
@@ -180,7 +177,7 @@
     align-items: center;
     width: 565px;
     background-color: #253f39;
-    border-radius: 7px;
+    border-radius: 5px;
     color: white;
     padding: 16px;
     margin-bottom: 10px;
@@ -197,27 +194,27 @@
     display: flex;
     justify-content: flex-start;
     padding-left: 15px;
+    font-size: 18px;
 }
 
 .inquireMainBtnWrapper {
     display: flex;
-    gap: 20px;
+    gap: 10px;
     padding-right: 15px;
+    align-items: center;
 }
 
 .inquireMainContent {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 450px;
-    height: auto;
-    text-align: center;
     background-color: white;
     color: black;
     padding: 16px;
-    border-radius: 7px;
-    margin-top: 10px;
+    border-radius: 5px;
+    margin-top: 20px;
     position: relative;
+    width: 100%;
 }
 
 .AnswerBox {
@@ -225,16 +222,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .openAnswerBtn, .closeAnswerBtn {
-    border-radius: 7px;
+    border-radius: 20px;
     background-color: white;
     border: none;
     cursor: pointer;
-    height: 30px;
     margin-top: 20px;
-    width: 80px;
+    padding: 5px 10px;
+    transition: all 0.3s;
 }
 
 .openAnswerBtn:hover, .closeAnswerBtn:hover {
@@ -246,20 +244,22 @@
     justify-content: flex-end;
     align-items: center;
     width: 100%;
+    align-items: center;
 }
 
 .inquireMainPatch, .inquireMainBtnDelete {
-    border-radius: 7px;
+    border-radius: 15px;
     background-color: white;
     border: none;
     color: black;
-    width: 40px;
-    height: 20px;
+    padding: 3px 7px;
     cursor: pointer;
+    transition: all 0.3s;
 }
 
 .inquireMainBtnDelete {
     margin-right: 14px;
+    color: red;
 }
 
 .inquireMainBtnOff {
@@ -275,7 +275,7 @@
 }
 
 .inquireMainBtn {
-    border-radius: 7px;
+    border-radius: 5px;
     background-color: white;
     border: none;
     margin-top: 10px;
@@ -293,7 +293,7 @@
 }
 
 .inquireMainAnswer {
-    border-radius: 7px;
+    border-radius: 5px;
     margin-top: 20px;
     width: 450px;
     height: 100px;
@@ -305,25 +305,28 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 7px;
-    margin-top: 10px;
-    width: 450px;
-    height: auto;
+    border-radius: 5px;
+    margin-top: 15px;
     background-color: white;
     color: black;
     position: relative;
     padding: 16px;
+    width: 100%;
 }
 
 .inquireMainAdiminAnswerTitle {
     position: absolute;
-    left: 0;
-    top: 0;
-    padding: 10px;
+    left: 5px;
+    top: 5px;
+    padding: 5px 15px;
+    border: 1px solid #e5e5e5;
+    border-radius: 25px;
+    background-color: #ffd859;
+    color: white;
 }
 
 .inquireMainAdiminAnswerContent {
-    margin-top: 20px;
+    margin-top: 30px;
     padding-bottom: 20px;
     word-break: break-all;
 }
@@ -335,9 +338,10 @@
     align-items: center;
     width: 565px;
     background-color: #253f39;
-    border-radius: 7px;
+    border-radius: 5px;
     color: white;
     padding: 16px;
+    margin-top: 50px;
 }
 
 .answerTitle {
@@ -345,23 +349,27 @@
     justify-content: flex-start;
     width: 100%;
     margin-bottom: 10px;
+    font-size: 18px;
 }
 
 .answerMainName {
-    border-radius: 7px;
-    width: 450px;
-    height: 50px;
+    border-radius: 5px;
+    width: 100%;
+    height: 45px;
     resize: none;
     outline: none;
+    padding: 10px;
+    font-size: 18px;
 }
 
 .answerMain {
-    border-radius: 7px;
+    border-radius: 5px;
     margin-top: 10px;
-    width: 450px;
+    width: 100%;
     height: 100px;
     resize: none;
     outline: none;
+    padding: 10px;
 }
 
 .answerBtnWrapper {
@@ -374,18 +382,19 @@
 .answerCheck, .answerSecret {
     margin-top: 10px;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .answerRegisterBtn {
-    border-radius: 7px;
+    border-radius: 15px;
     background-color: white;
     border: none;
     margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 45px;
+    margin-left: 15px;
     cursor: pointer;
-    height: 20px;
-    width: 50px;
+    padding: 2px 10px;
+    font-size: 15px;
+    transition: all 0.3s;
 }
 
 .answerRegisterBtn:hover {
@@ -400,7 +409,7 @@
     align-items: center;
     width: 565px;
     background-color: #253f39;
-    border-radius: 7px;
+    border-radius: 5px;
     color: white;
     padding: 16px;
 }
@@ -413,18 +422,23 @@
 }
 
 .patchMainName {
-    border-radius: 7px;
-    width: 450px;
+    border-radius: 5px;
+    width: 100%;
+    font-size: 18px;
     height: 50px;
     resize: none;
+    padding: 10px;
+    outline: none;
 }
 
 .patchMain {
-    border-radius: 7px;
+    border-radius: 5px;
     margin-top: 10px;
-    width: 450px;
     height: 100px;
     resize: none;
+    outline: none;
+    padding: 10px;
+    width: 100%;
 }
 
 .patchBtnWrapper {
@@ -437,27 +451,29 @@
 .patchCheck, .patchSecret {
     margin-top: 10px;
     margin-left: 10px;
+    cursor: pointer;
 }
 
 .patchRegisterBtn {
-    border-radius: 7px;
+    border-radius: 15px;
     background-color: white;
     border: none;
     margin-top: 10px;
-    margin-left: 30px;
+    margin-left: 10px;
     cursor: pointer;
-    height: 20px;
+    padding: 3px 7px;
+    transition: all 0.3s;
 }
 
 .patchCancelBtn {
-    border-radius: 7px;
+    border-radius: 15px;
     background-color: white;
     border: none;
     margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 45px;
+    margin-left: 10px;
     cursor: pointer;
-    height: 20px;
+    padding: 3px 7px;
+    transition: all 0.3s;
 }
 
 
